---------------------------------------------------------------------------------------------------
Version: 0.0.13
Date: ????
  Info:
    - Yummy fresh sprites
---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: 2025. 04. 30
  Info:
    - Change status from "red, ingredients" to "green, working"
    - Trial east occluder
    - Remove imagemagik commands
    - Batch 12
    - Batch 13
    - Batch 14
    - Yeet the pipe cover layer
    - Cleanup
    - Unlock rotation since pipe covers are unused
    - Appease the furry
    - Setup remnants
    - Embed the shadow into the remnant
    - Undo shadow
    - Connect pillars whilst paused in editor mode
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2025. 04. 27
  Info:
    - Crude initial player facing furnace
    - Complete the prototype switcharoo
    - Fix the pipeline rendering
    - Make the working visualizations operational again
    - Fix the frame rendering over/under the pipes
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2025. 04. 27
  Info:
    - Import new batch
    - Update lua for new sprite batch
    - Try some imagemagik commands
    - Fix shadow fattening
    - Prune storage tank graphic set
    - Update the batch of sprites for the shadow
    - Work on the back legs
    - Play around with the pipe cover pictures
    - Block rotation so we only need one pipe
    - Implement the rendered pipes
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2025. 04. 22
  Info:
    - Use a hidden furnace for the working visualizations
    - Add thumbnail
    - Fix pipe on the right overlaying the tower
    - Get rid of the fluid window
    - Actualize thumbnail