@@ -195,6 +195,8 @@ local furnace = {
 
   -- circuit_connector = circuit_connector_definitions["storage-tank"],
   -- circuit_wire_max_distance = default_circuit_wire_max_distance,
+
+  bottleneck_ignore = true,
 }
 
 
