@@ -3,6 +3,7 @@ Version: 0.0.13
 Date: ????
   Info:
     - Yummy fresh sprites
+    - Support bottleneck lite
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.12
 Date: 2025. 04. 30
